# smart-cdss-api

./: .gitignore  LICENSE  Makefile  README.md  application.py  auth.py  pyproject.toml  zappa_settings.json.tpl
smart_cdss_api/api/: load.py
smart_cdss_api/conf/: conf.py
smart_cdss_api/ui/: ui_analytics.py  ui_application.py
test/: get_parameter_test.py  smartcdss_test.py  test_micro.json
