[tool.poetry]
name = "smart_cdss_api"
version = "0.1.0"
description = "API and UI for evaluate antibiotic eficience"
authors = ["robson <r.zagre.jr@gmail.com>", "ricardo giglio"]

[tool.poetry.dependencies]
python = "~3.7"
numpy = "1.18"
scikit-learn = "^0.22.2"
pandas = "^1.0.1"
zappa = "0.51.0"
troposphere = "2.7.0"
cfn_flip = "1.2.3"
awscli = "^1.18.168"
xlrd = "^1.2.0"
joblist = "^2.0.3"
Flask = "^1.1.1"
Flask-RESTful = "^0.3.8"
Flask-HTTPAuth = "^4.0.0"
python-dateutil = "^2.6.0"
Unidecode = "^1.1.1"


[tool.poetry.dev-dependencies]
boto3 = "^1.12.35"
gunicorn = "^20.0.4"
streamlit = "^0.57.1"
plotly = "^4.6.0"
grip = "^4.5.2"
openpyxl = "^3.0.3"
